syntax = "proto3";

package dousheng.interaction.comment;

//生成Go文件的包目录路径
option go_package="github.com/Go-To-Byte/DouSheng/interaction-service/apps/comment";


service Service {
  //发表评论
  rpc CommentAction(CommentActionRequest) returns (CommentActionResponse);
  //获取评论
  rpc GetCommentList(GetCommentListRequest) returns (GetCommentListResponse);
}

//评论实体
message Comment {
  // @gotags: json:"id"
  int64 id = 1; // 评论ID
  // @gotags: json:"user_id"
  int64 user_id = 2; // 评论者ID
  // @gotags: json:"content"
  string content = 3; // 评论内容
  // @gotags: json:"create_date"
  string create_date = 4; // 评论日期 格式 mm-dd
}

message CommentPo{

  // @gotags: json:"id"
  int64 id = 1; // 评论ID
  // @gotags: json:"user_id"
  int64 user_id = 2; // 评论者ID
  // @gotags: json:"video_id"
  int64 video_id = 3; // 视频ID
  // @gotags: json:"content"
  string content = 4; // 评论内容
  // @gotags: json:"create_date"
  string create_date = 5; // 评论日期 格式 mm-dd
}

//发表评论请求体
message CommentActionRequest{
  // 评论者ID[登录用户的ID]
  // @gotags: json:"login_user_id" validate:"required"
  int64 login_user_id = 1;
  //视频id
  // @gotags: json:"video_id" validate:"required"
  int64 video_id = 2;
  //1-发布评论 2-删除评论
  // @gotags: json:"action_type" validate:"required"
  int64 action_type = 3;
  //用户填写的评论内容，在action_type=1时候使用
  // @gotags: json:"comment_text"
  string comment_text = 4;
  //action_type = 2时候使用
  // @gotags: json:"comment_id"
  int64 comment_id = 5;
}

//获取评论列表请求体
message GetCommentListRequest{
  // @gotags: json:"video_id" validate:"required"
  int64 video_id = 1;
}

//评论操作响应体
message CommentActionResponse{
  // @gotags: json:"comment"
  Comment comment = 1; // 评论内容
}

//获取评论（列表）响应体
message GetCommentListResponse{
  // @gotags: json:"comment_list"
  repeated Comment comment_list = 3; // 评论列表
}
